<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/crypto_background"
    android:gravity="center"
    tools:context=".ui.login.SignInActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:id="@+id/titleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Coin Tracker"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/emailAdress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/e_mail"
                android:drawableStart="@drawable/baseline_person_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:autofillHints="Enter your email"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/signInPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:drawableStart="@drawable/baseline_lock_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:autofillHints="Enter your password" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/sign_in"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_corner_red"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgotPassword"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:text="@string/forgot_password"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/redirectSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/no_account"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>